fix for fdo#57836 throw when attempting to store basicide model

Change-Id: I8769a63be61d45817757be3ad23ffc7b01173041